# prefer-extension

./: .gitignore  README.md  pyproject.toml
prefer_extension/: cli.py
tests/: test_prefer_extension.py
