[tool.poetry]
name = "prefer-extension"
version = "0.1.1"
description = "A command line tool to filter a list of files with duplicates and only keep one filetype. It will use the preferred filetype if more than one exist."
authors = ["Brian Sunter <public@briansunter.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.1"
funcy = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
prefer-extension = 'prefer_extension.cli:process'
